--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://scassius.github.io/ai-text-adventure",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
